<?xml version="1.0"?>
<package format="2">
  <name>uarm_controller</name>
  <version>0.0.0</version>
  <description>The uarm_controller package</description>

  <maintainer email="itatsuya@vt.edu">Tatsuya Ishikawa</maintainer>

  <license>BSD</license>

  <author email="itatsuya@vt.edu">Tatsuya Ishikawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_export_depend>ps3joy</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <exec_depend>ps3joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uarm</exec_depend>
</package>
